improvement: changed presentation folder structure and added cors policy

--- a/Strength.Api/appsettings.Development.json
+++ b/Strength.Api/appsettings.Development.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Cors": {
+    "PolicyName": "vite-react-app",
+    "Origin": "http://localhost:5173"
+  },
   "Email": {
     "SenderEmail": "strength@noreply.com",
     "Sender": "Strength",
