--- a/Strength.Api/appsettings.json
+++ b/Strength.Api/appsettings.json
@@ -6,6 +6,10 @@
     }
   },
   "AllowedHosts": "*",
+  "Cors": {
+    "PolicyName": "",
+    "Origin": ""
+  },
   "Email": {
     "SenderEmail": "",
     "Sender": "",
