--- a/Strength.Presentation/Strength.Presentation.csproj
+++ b/Strength.Presentation/Strength.Presentation.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,12 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="12.4.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="MediatR" Version="12.4.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5"/>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Strength.Application\Strength.Application.csproj" />
+    <ProjectReference Include="..\Strength.Application\Strength.Application.csproj"/>
   </ItemGroup>
 
 </Project>
